[refactor] customer product assign api docs.
